Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-641

pn_connection_t leaked when links not closed

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-0.8
    • proton-0.8
    • proton-c
    • None

    Description

      If the application doesn't call pn_link_close(), but calls on_session_close(), pn_connection_close(), then pn_transport_free() and pn_connection_free(), the pn_connection_t object appear to be leaked.

      Will attach reproducer. See also QPID-5951.

      Attachments

        1. proton_leak.cpp
          5 kB
          Gordon Sim

        Issue Links

          Activity

            People

              rhs Rafael H. Schloming
              gsim Gordon Sim
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: