PROTON-641: fixed link cleanup on connection/session abort; made free not close automatically

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1620643 13f79535-47bb-0310-9956-ffa450edef68