proton-j/src/main/java/org/apache/qpid/proton/engine/impl/EndpointImpl.java
@@ -190,11 +190,6 @@ public abstract class EndpointImpl implements ProtonJEndpoint
         freed = true;
 
         doFree();
-
-        if (_localState == EndpointState.ACTIVE) {
-            close();
-        }
-
         decref();
     }
 
